--- a/halo/index.html
+++ b/halo/index.html
@@ -130,31 +130,35 @@
         </div>
       </div>
       <section class="intro intro--camera">
-        <div class="container px-sm-5 px-xl-0">
-          <div class="intro__text d-flex flex-column">
-            <h1>Máy ảnh DSLR/Mirrorless</h1>
-            <h3>
-               Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3>
-            <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+        <div class="container-xl px-sm-5 px-xl-0">
+          <div class="row">
+            <div class="intro__text d-flex flex-column col-md">
+              <h1>Máy ảnh DSLR/Mirrorless</h1>
+              <h3 class="font-italic">
+                 Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3>
+              <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+            </div>
+            <div class="intro__img col-md"><img src="img/body-img/camera-intro-imgv2.png" alt=""></div>
           </div>
-          <div class="intro__img"><img src="img/body-img/camera-intro-imgv2.png" alt=""></div>
         </div>
       </section>
       <section class="intro intro--lens dark-side">
-        <div class="container px-sm-5 px-xl-0">
-          <div class="intro__text d-flex flex-column">
-            <h1>Ống kính máy ảnh</h1>
-            <h3>Góc nhìn mới, cảm nhận mới, thế giới mới</h3>
-            <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+        <div class="container-xl px-sm-5 px-xl-0">
+          <div class="row">
+            <div class="intro__text d-flex flex-column col-md">
+              <h1>Ống kính máy ảnh</h1>
+              <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3>
+              <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+            </div>
+            <div class="intro__img col-md"><img src="img/lens-img/lens-intro-imgv2.png" alt=""></div>
           </div>
-          <div class="intro__img"><img src="img/lens-img/lens-intro-imgv2.png" alt=""></div>
         </div>
       </section>
       <section class="intro intro--equip">
-        <div class="container px-sm-5 px-xl-0">
+        <div class="container-xl px-sm-5 px-xl-0">
           <div class="intro__text d-flex flex-column">
             <h1>Phụ kiện máy ảnh</h1>
-            <h3>Dù có “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
+            <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
           </div>
           <div class="intro__img display-till-md"><img src="img/equip-img/equip-intro--min.png" alt=""></div>
           <div class="intro__img card-columns hidden-till-md">
@@ -167,30 +171,32 @@
         </div>
       </section>
       <section class="specials dark-side">
-        <div class="container px-sm-5 px-xl-0">
-          <h1>Đối tác chiến lược</h1>
-          <div class="brands__img"><img src="img/misc-img/brands-sony.png" alt=""><img src="img/misc-img/brands-nikon.png" alt=""><img src="img/misc-img/brands-canon.png" alt=""><img src="img/misc-img/brands-sigma.png" alt=""></div>
+        <div class="container-xl px-sm-5 px-xl-0 d-flex flex-column align-items-center">
+          <h1 class="mb-5">Đối tác chiến lược</h1>
+          <div class="brands__img row"><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-sony.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-nikon.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-canon.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-sigma.png" alt=""></div>
           <div class="brands__text">
-            <h3>Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: từ 12 tháng lên 24 tháng</h3>
+            <h3 class="font-italic text-center">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
-          <h1>Chính sách độc quyền</h1>
+          <h1 class="mb-5">Chính sách độc quyền</h1>
           <div class="policy">
-            <div class="policy__item">
-              <p class="policy__text"><span>Miễn phí</span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
-              <div class="policy__icon"><i class="fas fa-truck"></i>
-                <p>FREE</p>
+            <div class="row">
+              <div class="policy__item col border border-white mx-3">
+                <p class="policy__text text-center"><span>Miễn phí</span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
+                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
+                  <p>FREE</p>
+                </div>
               </div>
-            </div>
-            <div class="policy__item">
-              <p class="policy__text">Đổi mới sản phẩm hoặc<span> hoàn tiền 100%</span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
-              <div class="policy__icon"><i class="fas fa-history"></i>
-                <p>100%</p>
+              <div class="policy__item col border border-white mx-3">
+                <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span> hoàn tiền 100%</span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
+                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
+                  <p>100%</p>
+                </div>
               </div>
-            </div>
-            <div class="policy__item">
-              <p class="policy__text">Hỗ trợ trả góp mọi sản phẩm với <span>0% lãi suất</span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
-              <div class="policy__icon"><i class="far fa-credit-card"></i>
-                <p>0%</p>
+              <div class="policy__item col border border-white mx-3">
+                <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span>0% lãi suất</span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
+                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
+                  <p>0%</p>
+                </div>
               </div>
             </div>
           </div>
@@ -198,14 +204,14 @@
         </div>
       </section>
       <section class="promo">
-        <div class="container px-sm-5 px-xl-0">
+        <div class="container-xl px-sm-5 px-xl-0">
           <h1>Tin khuyến mại</h1>
           <div class="promo__collection"><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-2.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""></div>
           <button class="btn btn--dark seemore-btn" type="button">Xem thêm</button>
         </div>
       </section>
       <section class="review dark-side">
-        <div class="container px-sm-5 px-xl-0">
+        <div class="container-xl px-sm-5 px-xl-0">
           <h1>HALO review</h1>
           <div class="review-item"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
             <div class="review-item__content">
@@ -227,7 +233,7 @@
         </div>
       </section>
       <section class="connection">
-        <div class="container px-sm-5 px-xl-0">
+        <div class="container-xl px-sm-5 px-xl-0">
           <h1 class="connection__header">Đăng ký email để nhận tin tức mới nhất từ HALO</h1>
           <input class="connection__input" type="text" placeholder="Email của bạn...">
           <button class="btn connection__submit-btn">Gửi</button>
