--- a/halo/index.html
+++ b/halo/index.html
@@ -172,56 +172,53 @@
       </section>
       <section class="specials dark-side">
         <div class="container-xl px-sm-5 px-xl-0 d-flex flex-column align-items-center">
-          <h1 class="mb-5">Đối tác chiến lược</h1>
-          <div class="brands__img row"><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-sony.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-nikon.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-canon.png" alt=""><img class="col-6 col-md-3 mb-5" src="img/misc-img/brands-sigma.png" alt=""></div>
+          <h1>Đối tác chiến lược</h1>
+          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-sony.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-nikon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-canon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-sigma.png" alt=""></div>
           <div class="brands__text">
             <h3 class="font-italic text-center">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
-          <h1 class="mb-5">Chính sách độc quyền</h1>
-          <div class="policy">
-            <div class="row">
-              <div class="policy__item col border border-white mx-3">
-                <p class="policy__text text-center"><span>Miễn phí</span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
-                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
-                  <p>FREE</p>
-                </div>
+          <h1>Chính sách độc quyền</h1>
+          <div class="policy d-flex justify-content-between">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+              <p class="policy__text text-center"><span class="font-weight-bold">Miễn phí </span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
+              <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
+                <p>FREE</p>
               </div>
-              <div class="policy__item col border border-white mx-3">
-                <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span> hoàn tiền 100%</span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
-                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
-                  <p>100%</p>
-                </div>
+            </div>
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+              <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span class="font-weight-bold"> hoàn tiền 100% </span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
+              <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
+                <p>100%</p>
               </div>
-              <div class="policy__item col border border-white mx-3">
-                <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span>0% lãi suất</span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
-                <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
-                  <p>0%</p>
-                </div>
+            </div>
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+              <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span class="font-weight-bold">0% lãi suất </span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
+              <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
+                <p>0%  </p>
               </div>
             </div>
           </div>
-          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết       </button>
         </div>
       </section>
       <section class="promo">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>Tin khuyến mại</h1>
-          <div class="promo__collection"><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-2.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""></div>
-          <button class="btn btn--dark seemore-btn" type="button">Xem thêm</button>
+          <div class="promo__collection row"><img class="promo-item col-md-4" src="img/misc-img/promo-img-1.jpg" alt=""><img class="promo-item col-md-4" src="img/misc-img/promo-img-2.jpg" alt=""><img class="promo-item col-md-4" src="img/misc-img/promo-img-1.jpg" alt=""></div>
+          <button class="btn btn--dark seemore-btn mx-auto" type="button">Xem thêm</button>
         </div>
       </section>
       <section class="review dark-side">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>HALO review</h1>
-          <div class="review-item"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
-            <div class="review-item__content">
+          <div class="review-item d-flex"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+            <div class="review-item__content d-flex flex-wrap">
               <h2>Top 5 DSLR đáng mua năm 2021</h2>
               <p class="subtext">Trung Đức</p>
               <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
               <p class="review-headlines">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
             </div>
           </div>
-          <div class="review-item"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+          <div class="review-item d-flex"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
             <div class="review-item__content">
               <h2>Top 5 DSLR đáng mua năm 2021</h2>
               <p class="subtext">Trung Đức</p>
