--- a/halo/index.html
+++ b/halo/index.html
@@ -209,23 +209,19 @@
       </section>
       <section class="review dark-side">
         <div class="container-xl px-sm-5 px-xl-0">
-          <h1>HALO review</h1>
-          <div class="review-item d-flex"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
-            <div class="review-item__content d-flex flex-wrap">
+          <h1>HALO review</h1><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+            <div class="review-item__content d-flex flex-wrap align-items-start">
               <h2>Top 5 DSLR đáng mua năm 2021</h2>
               <p class="subtext">Trung Đức</p>
               <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
-              <p class="review-headlines">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
-            </div>
-          </div>
-          <div class="review-item d-flex"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+              <p class="review-headlines hidden-till-md">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+            </div></a><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
             <div class="review-item__content">
               <h2>Top 5 DSLR đáng mua năm 2021</h2>
               <p class="subtext">Trung Đức</p>
               <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
-              <p class="review-headlines">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
-            </div>
-          </div>
+              <p class="review-headlines hidden-till-md">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+            </div></a>
           <button class="btn btn--light seemore-btn" type="button">Xem thêm        </button>
         </div>
       </section>
