--- a/halo/index.html
+++ b/halo/index.html
@@ -210,10 +210,10 @@
       <section class="review dark-side">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>HALO review</h1><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
-            <div class="review-item__content d-flex flex-wrap align-items-start">
+            <div class="review-item__content d-flex flex-wrap align-items-start align-content-start">
               <h2>Top 5 DSLR đáng mua năm 2021</h2>
-              <p class="subtext">Trung Đức</p>
-              <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
+              <p class="subtext font-italic font-weight-light">Trung Đức</p>
+              <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-2"> </i>01/01/2021</p>
               <p class="review-headlines hidden-till-md">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
             </div></a><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
             <div class="review-item__content">
