--- a/halo/index.html
+++ b/halo/index.html
@@ -132,7 +132,7 @@
       <section class="intro intro--camera">
         <div class="container-xl px-sm-5 px-xl-0">
           <div class="row">
-            <div class="intro__text d-flex flex-column col-md">
+            <div class="intro__text d-flex flex-column justify-content-center col-md">
               <h1>Máy ảnh DSLR/Mirrorless</h1>
               <h3 class="font-italic">
                  Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3>
@@ -145,7 +145,7 @@
       <section class="intro intro--lens dark-side">
         <div class="container-xl px-sm-5 px-xl-0">
           <div class="row">
-            <div class="intro__text d-flex flex-column col-md">
+            <div class="intro__text d-flex flex-column justify-content-center col-md">
               <h1>Ống kính máy ảnh</h1>
               <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3>
               <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
@@ -155,7 +155,7 @@
         </div>
       </section>
       <section class="intro intro--equip">
-        <div class="container-xl px-sm-5 px-xl-0">
+        <div class="container-xl px-sm-5 px-xl-0 mw-900">
           <div class="intro__text d-flex flex-column">
             <h1>Phụ kiện máy ảnh</h1>
             <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
@@ -167,7 +167,7 @@
             <div class="card"><img class="card-img" src="img/equip-img/equip-3.jpg" alt=""></div>
             <div class="card"><img class="card-img" src="img/equip-img/equip-4.png" alt=""></div>
           </div>
-          <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+          <button class="btn btn--dark seemore-btn mx-auto" type="button">Xem chi tiết</button>
         </div>
       </section>
       <section class="specials dark-side">
@@ -175,26 +175,26 @@
           <h1>Đối tác chiến lược</h1>
           <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-sony.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-nikon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-canon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/misc-img/brands-sigma.png" alt=""></div>
           <div class="brands__text">
-            <h3 class="font-italic text-center">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
+            <h3 class="font-italic text-center mw-900">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
           <h1>Chính sách độc quyền</h1>
           <div class="policy d-flex justify-content-between">
             <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center"><span class="font-weight-bold">Miễn phí </span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
-                <p>FREE</p>
+                <p class="font-weight-bold">FREE</p>
               </div>
             </div>
             <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span class="font-weight-bold"> hoàn tiền 100% </span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
-                <p>100%</p>
+                <p class="font-weight-bold">100%</p>
               </div>
             </div>
             <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span class="font-weight-bold">0% lãi suất </span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
-                <p>0%  </p>
+                <p class="font-weight-bold">0%  </p>
               </div>
             </div>
           </div>
@@ -208,30 +208,36 @@
         </div>
       </section>
       <section class="review dark-side">
-        <div class="container-xl px-sm-5 px-xl-0">
-          <h1>HALO review</h1><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img-v2.png" alt="">
-            <div class="review-item__content d-flex flex-wrap align-items-start align-content-start">
-              <h2>Top 5 DSLR đáng mua năm 2021</h2>
-              <p class="subtext font-italic font-weight-light">Trung Đức</p>
-              <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-1"> </i>01/01/2021</p>
-              <p class="review-headlines hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+        <div class="container-xl px-sm-5 px-xl-0 mw-900">
+          <h1>HALO review</h1><a class="review-item d-flex" href=""><img class="review-item__img" src="img/misc-img/review-img-v2.png" alt="">
+            <div class="review-item__content w-100 d-flex flex-column justify-content-between">
+              <div class="review-header d-flex flex-wrap align-items-start align-content-start">
+                <h2 class="w-100">Top 5 DSLR đáng mua năm 2021</h2>
+                <p class="subtext font-italic font-weight-light">Trung Đức</p>
+                <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-1 mx-sm-2"> </i>01/01/2021</p>
+              </div>
+              <p class="review-preview hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
             </div></a><a class="review-item d-flex" href="#"><img class="review-item__img" src="img/misc-img/review-img-v2.png" alt="">
-            <div class="review-item__content d-flex flex-wrap align-items-start align-content-start">
-              <h2>Top 5 DSLR đáng mua năm 2021</h2>
-              <p class="subtext font-italic font-weight-light">Trung Đức</p>
-              <p class="subtext font-italic font-weight-light"> <i class="far fa-clock mx-1"> </i>01/01/2021</p>
-              <p class="review-headlines hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+            <div class="review-item__content w-100 d-flex flex-column justify-content-between">
+              <div class="review-header d-flex flex-wrap align-items-start align-content-start">
+                <h2 class="w-100">Top 5 DSLR đáng mua năm 2021</h2>
+                <p class="subtext font-italic font-weight-light">Trung Đức</p>
+                <p class="subtext font-italic font-weight-light"> <i class="far fa-clock mx-1 mx-sm-2"> </i>01/01/2021</p>
+              </div>
+              <p class="review-preview hidden-till-sm">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
             </div></a>
-          <button class="btn btn--light seemore-btn" type="button">Xem thêm        </button>
+          <button class="btn btn--light seemore-btn mx-auto" type="button">Xem thêm        </button>
         </div>
       </section>
       <section class="connection">
         <div class="container-xl px-sm-5 px-xl-0">
-          <h1 class="connection__header">Đăng ký email để nhận tin tức mới nhất từ HALO</h1>
-          <input class="connection__input" type="text" placeholder="Email của bạn...">
-          <button class="btn connection__submit-btn">Gửi</button>
-          <p class="connection__text">Hoặc theo dõi chúng tôi tại</p>
-          <div class="connection__socials"><a class="socials__item" href="#"><img src="img/misc-img/social-fb.png" alt=""></a><a class="socials__item" href="#"><img src="img/misc-img/social-insta.png" alt=""></a><a class="socials__item" href="#"><img src="img/misc-img/social-twitter.png" alt=""></a></div>
+          <h1 class="connection__header">Đăng ký để nhận tin mới nhất từ HALO</h1>
+          <form class="connection__form d-flex justify-content-center" action="">
+            <input class="connection__input" type="text" placeholder="Email của bạn...">
+            <button class="btn connection__submit-btn btn-primary font-italic">Gửi</button>
+          </form>
+          <p class="connection__text text-center">Hoặc theo dõi chúng tôi tại</p>
+          <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/misc-img/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/misc-img/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/misc-img/social-twitter.png" alt=""></a></div>
         </div>
       </section>
     </main>
