--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -77,7 +77,7 @@
             <div class="carousel-caption__img"></div>
             <div class="carousel-caption__img"></div>
           </div>
-          <p class="carousel-header">MỘT NGÀM CHO TẤT CẢ</p>
+          <p class="carousel-header font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
           <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
