--- a/halo/index.html
+++ b/halo/index.html
@@ -175,8 +175,7 @@
             <div class="intro__text d-flex flex-column justify-content-center col-md">
               <h1>Máy ảnh DSLR/Mirrorless</h1>
               <h3 class="font-italic">
-                 Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3>
-              <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+                 Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3><a class="btn btn--dark seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
             <div class="intro__img col-md"><img src="img/body-img/camera-intro-imgv2.png" alt=""></div>
           </div>
@@ -187,8 +186,7 @@
           <div class="row">
             <div class="intro__text d-flex flex-column justify-content-center col-md">
               <h1>Ống kính máy ảnh</h1>
-              <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3>
-              <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+              <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3><a class="btn btn--light seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
             <div class="intro__img col-md"><img src="img/lens-img/lens-intro-imgv2.png" alt=""></div>
           </div>
@@ -206,8 +204,7 @@
             <div class="card"><img class="card-img" src="img/equip-img/equip-5.png" alt=""></div>
             <div class="card"><img class="card-img" src="img/equip-img/equip-3.jpg" alt=""></div>
             <div class="card"><img class="card-img" src="img/equip-img/equip-4.png" alt=""></div>
-          </div>
-          <button class="btn btn--dark seemore-btn mx-auto" type="button">Xem chi tiết</button>
+          </div><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html">Xem chi tiết</a>
         </div>
       </section>
       <section class="specials dark-side">
