--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -83,8 +83,8 @@
           </div>
         </div>
       </div>
+      <h1 class="section__header portal__header"><span>Nhu cầu </span><span>của bạn?</span></h1>
       <section class="portal camera-carousel display-till-md">
-        <h1 class="section__header portal__header"><span>Nhu cầu </span><span>của bạn?</span></h1>
         <div class="carousel slide" id="camera-carousel" data-ride="carousel" data-touch="true" data-interval="false">
           <ul class="carousel-indicators">
             <li class="active" data-target="#camera-carousel" data-slide-to="0"></li>
@@ -109,31 +109,30 @@
         </div>
       </section>
       <section class="portal hidden-till-md">
-        <h1 class="section__header portal__header"><span>Nhu cầu </span><span>của bạn?</span></h1>
-        <div class="portal__background hidden-till-md"></div>
-        <div class="portal__body container-xl">
-          <div class="row"> 
-            <div class="banner-full banner-full--dslr d-flex col-md"> <img class="banner-full__img" src="img/camera-hub-img/portal-dslr-v1.png" alt="">
-              <div class="banner-full__text-area align-self-center">
-                <div class="banner-full__text-only font-weight-bold">
-                  <p class="banner__text">CHUYÊN NGHIỆP</p>
-                  <p class="banner__text">CHUẨN CHỈ</p>
-                  <p class="banner__text">CỘNG ĐỒNG LỚN</p>
-                </div><a class="btn btn--dark banner__btn banner-full__btn" href="#">Xem tất cả DSLR</a>
-              </div>
-            </div>
-            <div class="banner-full banner-full--mrl d-flex col-md"> 
-              <div class="banner-full__text-area align-self-center">
-                <div class="banner-full__text-only font-weight-bold">
-                  <p class="banner__text text-light">TIỆN LỢI</p>
-                  <p class="banner__text text-light">THỜI THƯỢNG</p>
-                  <p class="banner__text text-light">TRẺ TRUNG</p>
-                </div><a class="btn btn--light banner__btn banner-full__btn" href="#">Xem tất cả Mirrorless</a>
-              </div><img class="banner-full__img" src="img/camera-hub-img/portal-mrl-v1.png" alt="">
+        <div class="portal__bg hidden-till-md">
+          <div class="portal__bg--green"></div>
+          <div class="portal__bg--pink"></div>
+        </div>
+        <div class="portal__body container-xl d-flex">
+          <div class="banner-full banner-full--dslr d-flex w-50"><img class="banner-full__img" src="img/camera-hub-img/portal-dslr-v1.png" alt="">
+            <div class="banner-full__text-area align-self-center">
+              <div class="banner-full__text-only font-weight-bold">
+                <p class="banner__text">CHUYÊN NGHIỆP</p>
+                <p class="banner__text">CHUẨN CHỈ</p>
+                <p class="banner__text">CỘNG ĐỒNG LỚN</p>
+              </div><a class="btn btn--dark banner__btn banner-full__btn" href="#">Xem tất cả DSLR</a>
             </div>
           </div>
-        </div>
-        <button class="btn btn--dark portal-btn">Xem tất cả máy ảnh</button>
+          <div class="banner-full banner-full--mrl d-flex w-50">
+            <div class="banner-full__text-area align-self-center">
+              <div class="banner-full__text-only font-weight-bold">
+                <p class="banner__text text-light">TIỆN LỢI</p>
+                <p class="banner__text text-light">THỜI THƯỢNG</p>
+                <p class="banner__text text-light">TRẺ TRUNG</p>
+              </div><a class="btn btn--light banner__btn banner-full__btn" href="#">Xem tất cả Mirrorless</a>
+            </div><img class="banner-full__img" src="img/camera-hub-img/portal-mrl-max-v5.png" alt="">
+          </div>
+        </div><a class="btn btn--dark portal-btn" href="#">Xem tất cả máy ảnh</a>
       </section>
       <section class="item-row sale-row">
         <h1 class="section__header">HOT SALE</h1>
