--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -93,16 +93,16 @@
           <div class="carousel-inner camera-carousel-inner">
             <div class="carousel-item banner-carousel banner-carousel--dslr active"><img class="banner-carousel__img" src="img/camera-hub-img/portal-dslr-min.png" alt="">
               <div class="carousel-caption banner-carousel__caption font-weight-bold">
-                <p class="banner__text">CHUYÊN NGHIỆP</p>
-                <p class="banner__text">CHUẨN CHỈ</p>
-                <p class="banner__text">CỘNG ĐỒNG LỚN</p><a class="btn btn--dark banner__btn banner-carousel__btn" href="#">Xem tất cả DSLR</a>
+                <p class="banner-carousel__text banner-carousel__text--dslr">CHUYÊN NGHIỆP</p>
+                <p class="banner-carousel__text banner-carousel__text--dslr">CHUẨN CHỈ</p>
+                <p class="banner-carousel__text banner-carousel__text--dslr">CỘNG ĐỒNG LỚN</p><a class="btn btn--dark banner-carousel__btn" href="#">Xem tất cả DSLR</a>
               </div>
             </div>
             <div class="carousel-item banner-carousel banner-carousel--mrl"><img class="banner-carousel__img" src="img/camera-hub-img/portal-mrl-min.png" alt="">
               <div class="carousel-caption banner-carousel__caption font-weight-bold">
-                <p class="banner__text">TIỆN LỢI</p>
-                <p class="banner__text">THỜI THƯỢNG</p>
-                <p class="banner__text">TRẺ TRUNG</p><a class="btn btn--light banner__btn banner-carousel__btn" href="#">Xem tất cả Mirrorless</a>
+                <p class="banner-carousel__text banner-carousel__text--mrl">TIỆN LỢI</p>
+                <p class="banner-carousel__text banner-carousel__text--mrl">THỜI THƯỢNG</p>
+                <p class="banner-carousel__text banner-carousel__text--mrl">TRẺ TRUNG</p><a class="btn btn--light banner-carousel__btn" href="#">Xem tất cả Mirrorless</a>
               </div>
             </div>
           </div><a class="carousel-control-prev" href="#camera-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"></a><a class="carousel-control-next" href="#camera-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"></a>
@@ -117,20 +117,20 @@
           <div class="banner-full banner-full--dslr d-flex w-50"><img class="banner-full__img" src="img/camera-hub-img/portal-dslr-v1.png" alt="">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold">
-                <p class="banner__text">CHUYÊN NGHIỆP</p>
-                <p class="banner__text">CHUẨN CHỈ</p>
-                <p class="banner__text">CỘNG ĐỒNG LỚN</p>
-              </div><a class="btn btn--dark banner__btn banner-full__btn" href="#">Xem tất cả DSLR</a>
+                <p class="banner-full__text banner-full__text--dslr">CHUYÊN NGHIỆP</p>
+                <p class="banner-full__text banner-full__text--dslr">CHUẨN CHỈ</p>
+                <p class="banner-full__text banner-full__text--dslr">CỘNG ĐỒNG LỚN</p>
+              </div><a class="btn btn--dark banner-full__btn banner-full__btn--dslr" href="#">Xem tất cả DSLR</a>
             </div>
           </div>
           <div class="banner-full banner-full--mrl d-flex w-50">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold">
-                <p class="banner__text text-light">TIỆN LỢI</p>
-                <p class="banner__text text-light">THỜI THƯỢNG</p>
-                <p class="banner__text text-light">TRẺ TRUNG</p>
-              </div><a class="btn btn--light banner__btn banner-full__btn" href="#">Xem tất cả Mirrorless</a>
-            </div><img class="banner-full__img" src="img/camera-hub-img/portal-mrl-max-v5.png" alt="">
+                <p class="banner-full__text banner-full__text--mrl text-light">THỜI THƯỢNG</p>
+                <p class="banner-full__text banner-full__text--mrl text-light">TIỆN LỢI</p>
+                <p class="banner-full__text banner-full__text--mrl text-light">TRẺ TRUNG</p>
+              </div><a class="btn btn--light banner-full__btn banner-full__btn--mrl" href="#">Xem tất cả Mirrorless</a>
+            </div><img class="banner-full__img" src="img/camera-hub-img/portal-mrl-max-v6.png" alt="">
           </div>
         </div><a class="btn btn--dark portal-btn" href="#">Xem tất cả máy ảnh</a>
       </section>
